--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
                         </configuration>
                     </execution>
                     <execution>
-                        <id>npm install</id>
+                        <id>sudo npm install</id>
                         <goals>
                             <goal>npm</goal>
                         </goals>
