--- a/pom.xml
+++ b/pom.xml
@@ -143,8 +143,8 @@
                                     <goal>install-node-and-npm</goal>
                                 </goals>
                                 <configuration>
-                                    <nodeVersion>v8.9.4</nodeVersion>
-                                    <npmVersion>5.6.0</npmVersion>
+                                    <nodeVersion>v8.10.0</nodeVersion>
+                                    <npmVersio>3.5.2</npmVersion>
                                 </configuration>
                             </execution>
                             <execution>
