--- a/pom.xml
+++ b/pom.xml
@@ -144,7 +144,7 @@
                                 </goals>
                                 <configuration>
                                     <nodeVersion>v8.10.0</nodeVersion>
-                                    <npmVersio>3.5.2</npmVersion>
+                                    <npmVersion>3.5.2</npmVersion>
                                 </configuration>
                             </execution>
                             <execution>
