--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,17 @@
                                     <arguments>install</arguments>
                                 </configuration>
                             </execution>
+				
+			    <execution>
+                                <id>npm update</id>
+                                <goals>
+                                    <goal>npm</goal>
+                                </goals>
+                                <configuration>
+                                    <arguments>update</arguments>
+                                </configuration>
+                            </execution>
+				
                             <execution>
                                 <id>npm run build</id>
                                 <goals>
