--- a/src/main/resources/application-deployment.properties
+++ b/src/main/resources/application-deployment.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:mysql://fullstackdb.cvmx6m0jgtkz.us-east-1.rds.amazon
 spring.datasource.username=admin
 spring.datasource.password=admin1234
 server.port=5000
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
